로그인, jwt 토큰 반환, 패스워드 암호화, smpt 이메일 인증 개발 및 문서화
